# labconf

./: .gitignore  INSTALL.md  LICENSE  PKGBUILD  README.md  README.ru.md  meson.build
.github/workflows/: ci.yml
data/: labconf.desktop
po/: meson.build  ru.po
src/: backup.vala  config.vala  environment_config.vala  fonts.vala  main.vala  theme_parser.vala  themes.vala  xbm_parser.vala
tests/: config_layout_logic_test.vala  config_matrix_test.vala  config_smoke_test.vala  environment_logic_test.vala  run-config-tests.sh
